# yara_scanner

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  scan  setup.py  test.yar  tox.ini  yara_scanner.py  ysc.py  yss.py
.circleci/: config.yml
docs/source/: conf.py  index.rst
etc/: external_vars.example.ini  logging.example.ini  logging.ini
tests/: test_yara_scanner.py  test_yara_scanner_server.py  util.py
tests/data/scan_targets/: scan_target_1.txt
tests/data/signatures/ruleset_a/: rule_1.yar
tests/data/signatures/ruleset_b/: rule_1.yar
tests/test_yara_scanner/: invalid_syntax.yar  valid_syntax.yar
yara_scanner/: __init__.py
