[tool.poetry]
name = "yara_scanner"
version = "1.0.14"
description = "A Python wrapper library for libyara and a local server for fully utilizing the CPUs of the system to scan with yara."
authors = ["John Davison <unixfreak0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.6.7"
yara-python = "^3.11.0"
plyara = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
